force-app/main/default/objects/c2g__codaInvoiceLineItem__c/fields/cer_Milestone__c.field-meta.xml
<CustomField>
    <fullName>cer_Milestone__c</fullName>
    <formula>ffpsai__BillingEventItem__r.pse__Milestone__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone</label>
    <type>Text</type>
</CustomField>