force-app/main/default/objects/c2g__codaInvoiceLineItem__c/fields/cer_Milestone_Id__c.field-meta.xml
<CustomField>
    <fullName>cer_Milestone_Id__c</fullName>
    <description>Filed used for power bi reports</description>
    <label>Milestone Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>