force-app/main/default/objects/c2g__codaInvoiceLineItem__c/fields/cer_Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>cer_Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>