force-app/main/default/objects/c2g__codaInvoiceLineItem__c/validationRules/Dimension_4_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Dimension_4_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( c2g__Dimension4__c )</errorConditionFormula>
    <errorMessage>Dimension 4 Needs to be populated</errorMessage>
</ValidationRule>